# ayed_practica_archivos

./: CMakeLists.txt  README.md  main.cpp  tateti.csv
include/: lector.hpp
src/: lector.cpp
